fix swiper overflow doesnt show login popup

--- a/src/styles/_swiper.scss
+++ b/src/styles/_swiper.scss
@@ -2,6 +2,9 @@
   display: flex;
   align-items: center;
   width: 100%;
+  padding-top: 50px;
+  margin-top: -50px;
+
   overflow: hidden;
 }
 
